plugins {
    id 'java'
    id 'org.springframework.boot' version '3.3.0'
    id 'io.spring.dependency-management' version '1.1.5'
    id 'org.flywaydb.flyway' version '10.13.0'
}

group = 'kr.co.cudo'
version = '0.1.0-SNAPSHOT'

java {
    toolchain {
        languageVersion = JavaLanguageVersion.of(17)
    }
}

configurations {
    compileOnly {
        extendsFrom annotationProcessor
    }
}

repositories {
    mavenCentral()
}

// HIGH-3 fix (OWASP A03:2025 Software Supply Chain Failures):
// 모든 configuration 의존성 버전을 gradle.lockfile 에 고정.
// 의존성 갱신 시: ./gradlew dependencies --write-locks
dependencyLocking {
    lockAllConfigurations()
}

ext {
    queryDslVersion = '5.1.0'
    mapstructVersion = '1.5.5.Final'
}

dependencies {
    // Spring Boot core
    implementation 'org.springframework.boot:spring-boot-starter-web'
    implementation 'org.springframework.boot:spring-boot-starter-data-jpa'
    implementation 'org.springframework.boot:spring-boot-starter-validation'
    implementation 'org.springframework.boot:spring-boot-starter-security'
    implementation 'org.springframework.boot:spring-boot-starter-actuator'
    implementation 'org.springframework.boot:spring-boot-starter-cache'

    // Phase 12 — Caffeine 캐시 (시스템 설정 TTL 60s)
    implementation 'com.github.ben-manes.caffeine:caffeine'

    // Phase 12 — Prometheus 메트릭 노출 (/actuator/prometheus)
    implementation 'io.micrometer:micrometer-registry-prometheus'

    // JSON logging
    implementation 'net.logstash.logback:logstash-logback-encoder:7.4'

    // JWT (관제서버/포털 발급 토큰 검증)
    implementation 'io.jsonwebtoken:jjwt-api:0.12.6'
    runtimeOnly    'io.jsonwebtoken:jjwt-impl:0.12.6'
    runtimeOnly    'io.jsonwebtoken:jjwt-jackson:0.12.6'

    // QueryDSL (복잡한 조회용 — 데이터마트 검색 등)
    implementation "com.querydsl:querydsl-jpa:${queryDslVersion}:jakarta"
    annotationProcessor "com.querydsl:querydsl-apt:${queryDslVersion}:jakarta"
    annotationProcessor 'jakarta.annotation:jakarta.annotation-api'
    annotationProcessor 'jakarta.persistence:jakarta.persistence-api'

    // MapStruct (DTO <-> Entity 변환)
    implementation "org.mapstruct:mapstruct:${mapstructVersion}"
    annotationProcessor "org.mapstruct:mapstruct-processor:${mapstructVersion}"

    // Lombok
    compileOnly 'org.projectlombok:lombok'
    annotationProcessor 'org.projectlombok:lombok'
    testCompileOnly 'org.projectlombok:lombok'
    testAnnotationProcessor 'org.projectlombok:lombok'

    // DB
    runtimeOnly 'org.mariadb.jdbc:mariadb-java-client'
    runtimeOnly 'com.h2database:h2'                  // 로컬·테스트용
    implementation 'org.flywaydb:flyway-core'
    implementation 'org.flywaydb:flyway-mysql'

    // HTTP clients (관제서버/포털/비식별서버/Gitea/ai-server 연동)
    implementation 'org.springframework.boot:spring-boot-starter-webflux'  // WebClient
    implementation 'io.github.resilience4j:resilience4j-spring-boot3:2.2.0'
    implementation 'io.github.resilience4j:resilience4j-reactor:2.2.0'

    // FFmpeg wrapper (Java)
    implementation 'net.bramp.ffmpeg:ffmpeg:0.8.0'

    // Quartz (기존 QRTZ_* 테이블과 호환되는 스케줄러)
    implementation 'org.springframework.boot:spring-boot-starter-quartz'

    // OpenAPI 문서 (Swagger)
    implementation 'org.springdoc:springdoc-openapi-starter-webmvc-ui:2.5.0'

    // Test
    testImplementation 'org.springframework.boot:spring-boot-starter-test'
    testImplementation 'org.springframework.security:spring-security-test'
    testImplementation 'io.projectreactor:reactor-test'
    testRuntimeOnly   'org.junit.platform:junit-platform-launcher'
    testImplementation 'org.testcontainers:junit-jupiter:1.19.8'
    testImplementation 'org.testcontainers:mariadb:1.19.8'
    testImplementation 'com.squareup.okhttp3:mockwebserver:4.12.0'
}

tasks.named('test') {
    useJUnitPlatform()
}

// QueryDSL Q-class 생성 경로
def querydslDir = "$buildDir/generated/querydsl"
sourceSets {
    main.java.srcDirs += [querydslDir]
}
tasks.withType(JavaCompile).configureEach {
    options.generatedSourceOutputDirectory.set(file(querydslDir))
}
clean {
    delete file(querydslDir)
}
